# fastest

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  test
.cache/clangd/index/: logging.c.7620AF00857BDB7E.idx  logging.h.49608911EF09EE83.idx  main.c.6EB5B9A05D20C909.idx  quick_tests.h.CA7E5A699D7E8E20.idx  tests.h.8673F76ECE579DCC.idx
.github/workflows/: build.yaml
bindings/: pybind.cpp  requirements.txt
demo/: shared_Makefile  shared_build_wheel.sh  shared_run_tests.sh
demo/scaling_test/: run_tests.sh  tests.py
demo/scaling_test/src/: main.c
demo/showcase/: Makefile  build_wheel.sh  main.py  tests.py
demo/showcase/src/: main.c
fastest_py/: main.py  pyproject.toml
fastest_py/src/fastest/: __init__.py  flags.py  logging.py  plotting.py  runner.py
include/: custom_tests.h  logging.h  modes.h  quick_tests.h  tests.h
include/fastest/: custom_tests.h  logging.h  quick_tests.h  test_list.h  tests.h
python/: setup.py
src/: logging.c  main.c  test_list.c
